# cei

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.zed/: settings.json
specs/: CEI_HTTP_PROXY_SPEC.md  CEI_SANDBOX_SPEC.md  CEI_TUN_SMOLTCP_SPEC.md  linux_sandbox_design.md
src/: launch.rs  lib.rs  main.rs  memfd_scratch.rs  policy.rs  proxy.rs  ptrace_rewrite.rs  seccomp_notify.rs  styrolite_launcher.rs  supervisor.rs
tests/: intercept.rs  launch.rs  launch_proxy.rs  proxy.rs
