[package]
name = "cei"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.177"
nix = { version = "0.31.2", features = ["ptrace"] }
rustix = { version = "1.1.4", features = ["fs", "process"] }
seccompiler = "0.5.0"
serde_json = "1.0.145"
styrolite = "0.3.1"
