[package]
name = "cei"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.177"
nix = { version = "0.31.2", features = ["fs", "mount", "process", "ptrace", "signal", "socket", "uio"] }
rustix = { version = "0.38", features = ["thread"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
